--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
@@ -61,7 +61,7 @@
     </div>
 
     <div class="image">
-        <img src="images/taaho.jpg" alt="">
+        <img src="./taaho.jpg" alt="">
     </div>
 
 </section>
@@ -77,7 +77,7 @@
 <div class="row-1">
 
     <div class="image">
-        <img src="images/about-img.jpg" alt="">
+        <img src="./about-img.jpg" alt="">
     </div>
 
     <div class="content">
@@ -274,7 +274,7 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="images/img-1.jpg" alt="">
+            <img src="./img-1.jpg" alt="">
             <h3> project 01 </h3>
             <div class="icons">
                 <a href="#" class="fas fa-link"></a>
@@ -284,7 +284,7 @@
         </div>
 
         <div class="box">
-            <img src="images/img-2.jpg" alt="">
+            <img src="./img-2.jpg" alt="">
             <h3> project 02 </h3>
             <div class="icons">
                 <a href="#" class="fas fa-link"></a>
@@ -294,7 +294,7 @@
         </div>
 
         <div class="box">
-            <img src="images/img-3.jpg" alt="">
+            <img src="./img-3.jpg" alt="">
             <h3> project 03 </h3>
             <div class="icons">
                 <a href="#" class="fas fa-link"></a>
@@ -304,7 +304,7 @@
         </div>
 
         <div class="box">
-            <img src="images/img-4.jpg" alt="">
+            <img src="./img-4.jpg" alt="">
             <h3> project 04 </h3>
             <div class="icons">
                 <a href="#" class="fas fa-link"></a>
@@ -314,7 +314,7 @@
         </div>
 
         <div class="box">
-            <img src="images/img-5.jpg" alt="">
+            <img src="./img-5.jpg" alt="">
             <h3> project 05 </h3>
             <div class="icons">
                 <a href="#" class="fas fa-link"></a>
@@ -324,7 +324,7 @@
         </div>
 
         <div class="box">
-            <img src="images/img-6.jpg" alt="">
+            <img src="./img-6.jpg" alt="">
             <h3> project 06 </h3>
             <div class="icons">
                 <a href="#" class="fas fa-link"></a>
@@ -383,7 +383,7 @@
 
         </form>
 
-        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30153.788252261566!2d72.82321484621745!3d19.141690214227783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b63aceef0c69%3A0x2aa80cf2287dfa3b!2sJogeshwari%20West%2C%20Mumbai%2C%20Maharashtra%20400047!5e0!3m2!1sen!2sin!4v1625069635379!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe>
+        <iframe class="map" src="./https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30153.788252261566!2d72.82321484621745!3d19.141690214227783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b63aceef0c69%3A0x2aa80cf2287dfa3b!2sJogeshwari%20West%2C%20Mumbai%2C%20Maharashtra%20400047!5e0!3m2!1sen!2sin!4v1625069635379!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe>
 
     </div>
 
@@ -417,7 +417,7 @@
 
 
 <!-- custom js file link  -->
-<script src="js/script.js"></script>
+<script src="./js/script.js"></script>
 
 </body>
 </html>
